# Scientific_Football_Manager_5v5

./: DEV_GUIDE.md  README.md  Scientific_Football_Manager_5v5_prototype.md
desktop_app/: Cargo.toml
desktop_app/src/: game_state.rs  main.rs
desktop_app/src/models/: player.rs  power_up.rs  scientific_domain.rs  team.rs
desktop_app/src/ui/: classement.rs  components.rs  fiches_joueurs.rs  gestion_equipe.rs  match_en_cours.rs  menu_principal.rs  mod.rs  preparation_match.rs  resultat_match.rs  styles.rs
mobile_app/: README.md
mobile_app/android/: Cargo.toml
mobile_app/android/app/src/main/java/com/scientificfootball/: MainActivity.java
mobile_app/ios/ScientificFootball/: ContentView.swift
mobile_app/shared/: Cargo.toml
mobile_app/shared/src/: lib.rs
mobile_app/shared/src/models/: match_engine.rs  mod.rs  player.rs
tests/: run_all_tests.py  test_game_balance.py  test_match_engine.py  test_mobile_parity.py  test_player_stats.py  test_power_ups.py  test_scientific_domains.py  test_team_management.py
