[package]
name = "scientific_football_manager_android"
version = "0.1.0"
edition = "2021"
description = "Scientific Football Manager 5v5 - Application Android"

[lib]
name = "scientific_football_manager"
crate-type = ["cdylib"]

[dependencies]
# Pour Android, utiliser android-game-activity et désactiver dynamic_linking
bevy = { version = "0.15", default-features = false, features = [
    "android-game-activity",
    "bevy_ui",
    "bevy_text",
    "bevy_render",
    "bevy_core_pipeline",
    "tonemapping_luts",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# Dépendance Android
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }

[profile.release]
opt-level = "z"  # Optimiser pour la taille
lto = true
codegen-units = 1
strip = true

# Configuration spécifique Android
[package.metadata.android]
package = "com.scientificfootball"
label = "Scientific Football Manager"
version_name = "0.1.0"
version_code = 1
min_sdk_version = 26
target_sdk_version = 34

[[package.metadata.android.uses-permission]]
name = "android.permission.INTERNET"
