[package]
name = "sfm_shared"
version = "0.1.0"
edition = "2021"
description = "Logique partagée pour Scientific Football Manager 5v5"

[lib]
name = "sfm_shared"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
